	<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>

		<groupId>org.springframework.boot</groupId>

		<artifactId>spring-boot-starter-parent</artifactId>

		<version>2.2.4.RELEASE</version>

		<relativePath /> <!-- lookup parent from repository -->

	</parent>

	<groupId>com.bornfire</groupId>

	<artifactId>BGLS</artifactId>

	<version>0.0.1-SNAPSHOT</version>

	<packaging>war</packaging>

	<name>BGLS</name>

	<description>BGLS Application</description>

	<properties>

		<java.version>1.8</java.version>

	</properties>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>


		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-tomcat</artifactId>

			<scope>provided</scope>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-test</artifactId>

			<scope>test</scope>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-data-jpa</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-thymeleaf</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-configuration-processor</artifactId>

			<optional>true</optional>

		</dependency>

		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc7 -->


		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-mail</artifactId>

		</dependency>

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-devtools</artifactId>

			<optional>true</optional>

			<scope>runtime</scope>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/font-awesome -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>font-awesome</artifactId>

			<version>5.9.0</version>

		</dependency>
		
		<dependency>
    <groupId>javax.interceptor</groupId>
    <artifactId>javax.interceptor-api</artifactId>
    <version>1.2</version>
    <scope>provided</scope>
</dependency>


		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>jquery</artifactId>

			<version>3.4.1</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>bootstrap</artifactId>

			<version>4.3.1</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/jquery-ui -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>jquery-ui</artifactId>

			<version>1.12.1</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/popper.js -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>popper.js</artifactId>

			<version>1.14.7</version>

		</dependency>


		<!-- https://mvnrepository.co3

        39956m/artifact/org.webjars/chartjs -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>chartjs</artifactId>

			<version>2.8.0</version>

		</dependency>
		
		<dependency>
		    <groupId>com.itextpdf</groupId>
		    <artifactId>itextpdf</artifactId>
		    <version>5.5.13.3</version>
		</dependency>


		<!-- <dependency> <groupId>org.springframework.session</groupId>
		<artifactId>spring-session-jdbc</artifactId>

            </dependency> -->

		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-security</artifactId>

		</dependency>

		<!--
		https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->

		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>6.21.3</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-fonts -->

		<dependency>

			<groupId>net.sf.jasperreports</groupId>

			<artifactId>jasperreports-fonts</artifactId>

			<version>6.9.0</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/jquery-form -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>jquery-form</artifactId>

			<version>4.2.2</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/joda-time/joda-time -->

		<dependency>

			<groupId>joda-time</groupId>

			<artifactId>joda-time</artifactId>

			<version>2.10.10</version>

		</dependency>

		<!-- EXCEL -->

		<!--
		https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-functions -->

		<dependency>

			<groupId>net.sf.jasperreports</groupId>

			<artifactId>jasperreports-functions</artifactId>

			<version>6.8.0</version>

		</dependency>

		<dependency>

			<groupId>org.apache.poi</groupId>

			<artifactId>poi-ooxml</artifactId>

			<version>3.17</version>

		</dependency>

		<dependency>

			<groupId>org.apache.poi</groupId>

			<artifactId>poi</artifactId>

			<version>3.17</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/com.monitorjbl/xlsx-streamer -->

		<dependency>

			<groupId>com.monitorjbl</groupId>

			<artifactId>xlsx-streamer</artifactId>

			<version>1.2.1</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/au.com.bytecode/opencsv -->

		<dependency>

			<groupId>au.com.bytecode</groupId>

			<artifactId>opencsv</artifactId>

			<version>2.4</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/jquery-validation -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>jquery-validation</artifactId>

			<version>1.19.0</version>

		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.webjars/datatables -->

		<dependency>

			<groupId>org.webjars</groupId>

			<artifactId>datatables</artifactId>

			<version>1.10.19</version>

		</dependency>

		<!--
		https://mvnrepository.com/artifact/com.github.darrachequesne/spring-data-jpa-datatables -->

		<dependency>

			<groupId>com.github.darrachequesne</groupId>

			<artifactId>spring-data-jpa-datatables</artifactId>

			<version>5.0.0</version>

		</dependency>

		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->

		<dependency>

			<groupId>org.codehaus.groovy</groupId>

			<artifactId>groovy</artifactId>

			<version>3.0.8</version>

		</dependency>


		<!-- https://mvnrepository.com/artifact/org.mozilla/rhino -->

		<dependency>

			<groupId>org.mozilla</groupId>

			<artifactId>rhino</artifactId>

			<version>1.7.13</version>

		</dependency>


		<dependency>

			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-web-services</artifactId>

		</dependency>

		<dependency>

			<groupId>org.jsoup</groupId>

			<artifactId>jsoup</artifactId>

			<version>1.12.1</version>

		</dependency>

		<dependency>

			<groupId>org.apache.commons</groupId>

			<artifactId>commons-csv</artifactId>

			<version>1.9.0</version> <!-- Use the latest version -->

		</dependency>
		<dependency>
    <groupId>com.oracle.database.jdbc</groupId>
    <artifactId>ojdbc8</artifactId>
    <version>19.14.0.0</version>
</dependency>

<dependency>
    <groupId>com.opencsv</groupId>
    <artifactId>opencsv</artifactId>
    <version>5.8</version>
</dependency>

<dependency>
    <groupId>org.springframework</groupId>
    <artifactId>spring-core</artifactId>
    <version>5.2.3.RELEASE</version>
</dependency>
	</dependencies>


	<build>

		<plugins>

			<plugin>

				<groupId>org.springframework.boot</groupId>

				<artifactId>spring-boot-maven-plugin</artifactId>


			</plugin>

		</plugins>

	</build>


	<repositories>
		
            <repository>
                <id>jaspersoft-third-party</id>
                <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
                <releases>
                    <enabled>true</enabled>
                </releases>
                <snapshots>
                    <enabled>true</enabled>
                </snapshots>
            </repository>
            <repository>
                <id>jr-ce-releases</id>
                <url>https://jaspersoft.jfrog.io/jaspersoft/jr-ce-releases</url>
                <releases>
                    <enabled>true</enabled>
                </releases>
                <snapshots>
                    <enabled>true</enabled>
                </snapshots>
            </repository>
            <repository>
                <id>jr-ce-snapshots</id>
                <url>https://jaspersoft.jfrog.io/jaspersoft/jr-ce-snapshots/</url>
                <releases>
                    <enabled>true</enabled>
                </releases>
                <snapshots>
                    <enabled>true</enabled>
                </snapshots>
            </repository>
	</repositories>


</project>